--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1116,76 +1116,76 @@
 
 /* Header */
 
-	#header {
-		@include padding(9em, 0, (0,0,_size(element-margin),0));
-		@include dark(#4686a0);
-		background-attachment:	fixed,							fixed,							fixed;
-		background-image:		url('images/overlay2.png'),		url('images/overlay3.svg'),		linear-gradient(45deg, _palette(accent1-alt) 5%, _palette(accent3-alt) 30%, _palette(accent6-alt));
-		background-position:	top left,						center center,					center center;
-		background-size:		auto,							cover,							cover;
-		overflow: hidden;
-		position: relative;
-		text-align: center;
+#header {
+    @include padding(9em, 0, (0,0,_size(element-margin),0));
+    @include dark(#4686a0);
+    background-attachment: fixed, fixed, fixed;
+    background-image: url('images/overlay2.png'), url('images/overlay3.svg'), linear-gradient(45deg,#FDB515 2%, #BC9B6A 30%, #003262);
+    background-position: top left, center center, center center;
+    background-size: auto, cover, cover;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
 
-		h1 {
-			margin: 0;
-		}
+    h1 {
+        margin: 0;
+    }
 
-		p {
-			margin: (_size(element-margin) * 0.5) 0 0 0;
-		}
+    p {
+        margin: (_size(element-margin) * 0.5) 0 0 0;
+    }
 
-		.actions {
-			@include vendor('justify-content', 'center');
-			margin-top: (_size(element-margin) * 1.25);
-			margin-left: 0;
-			position: relative;
+    .actions {
+        @include vendor('justify-content', 'center');
+        margin-top: (_size(element-margin) * 1.25);
+        margin-left: 0;
+        position: relative;
 
-			li {
-				&:first-child {
-					padding-left: 0;
-				}
-			}
+        li {
+            &:first-child {
+                padding-left: 0;
+            }
+        }
 
-			&:after {
-				background: _palette(dark, border);
-				content: '';
-				height: 100vh;
-				left: 50%;
-				position: absolute;
-				top: 100%;
-				width: 1px;
-			}
-		}
+        &:after {
+            background: _palette(dark, border);
+            content: '';
+            height: 100vh;
+            left: 50%;
+            position: absolute;
+            top: 100%;
+            width: 1px;
+        }
+    }
 
-		.inner {
-			@include vendor('transition', ('transform 1.5s ease', 'opacity 2s ease'));
-			@include vendor('transition-delay', '0.25s');
-			@include vendor('transform', 'scale(1)');
-			opacity: 1;
-			position: relative;
-			z-index: 1;
+    .inner {
+        @include vendor('transition', ('transform 1.5s ease', 'opacity 2s ease'));
+        @include vendor('transition-delay', '0.25s');
+        @include vendor('transform', 'scale(1)');
+        opacity: 1;
+        position: relative;
+        z-index: 1;
 
-			.actions {
-				@include vendor('transition', 'transform 1.25s ease');
-				@include vendor('transition-delay', '1s');
-				@include vendor('transform', 'translateY(0)');
-				opacity: 1;
-			}
-		}
+        .actions {
+            @include vendor('transition', 'transform 1.25s ease');
+            @include vendor('transition-delay', '1s');
+            @include vendor('transform', 'translateY(0)');
+            opacity: 1;
+        }
+    }
 
-		&:after {
-			@include vendor('transition', 'opacity 1s ease');
-			background-image: linear-gradient(45deg, _palette(accent3-alt), _palette(accent6-alt));
-			content: '';
-			height: 100%;
-			left: 0;
-			opacity: 0;
-			position: absolute;
-			top: 0;
-			width: 100%;
-		}
-	}
+    &:after {
+        @include vendor('transition', 'opacity 1s ease');
+        background-image: linear-gradient(45deg, _palette(accent3-alt), _palette(accent6-alt));
+        content: '';
+        height: 100%;
+        left: 0;
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+    }
+}
 
 	body.is-preload {
 		#header {
@@ -1207,40 +1207,40 @@
 
 /* Footer */
 
-	#footer {
-		@include padding(6em, 0, (0,0,_size(element-margin),0));
-		@include dark(#4686a0);
-		background-attachment:	fixed,							fixed,							fixed;
-		background-image:		url('images/overlay2.png'),		url('images/overlay4.svg'),		linear-gradient(45deg, _palette(accent6-alt), _palette(accent3-alt) 50%, _palette(accent1-alt) 95%);
-		background-position:	top left,						center center,					center center;
-		background-size:		auto,							cover,							cover;
-		text-align: center;
+#footer {
+    @include padding(6em, 0, (0,0,_size(element-margin),0));
+    @include dark(#4686a0);
+    background-attachment: fixed, fixed, fixed;
+    background-image: url('images/overlay2.png'), url('images/overlay4.svg'), linear-gradient(45deg, #FDB515 2%, #BC9B6A 30%, #003262)
+    background-position: top left, center center, center center;
+    background-size: auto, cover, cover;
+    text-align: center;
 
-		.icons {
-			margin: 0;
-		}
+    .icons {
+        margin: 0;
+    }
 
-		.copyright {
-			font-size: 0.8em;
-			list-style: none;
-			margin: _size(element-margin) 0 0 0;
-			padding: 0;
+    .copyright {
+        font-size: 0.8em;
+        list-style: none;
+        margin: _size(element-margin) 0 0 0;
+        padding: 0;
 
-			li {
-				border-left: solid 1px;
-				display: inline-block;
-				line-height: 1em;
-				margin-left: 1em;
-				padding: 0 0 0 1em;
+        li {
+            border-left: solid 1px;
+            display: inline-block;
+            line-height: 1em;
+            margin-left: 1em;
+            padding: 0 0 0 1em;
 
-				&:first-child {
-					border-left: 0;
-					margin-left: 0;
-					padding: 0;
-				}
-			}
-		}
-	}
+            &:first-child {
+                border-left: 0;
+                margin-left: 0;
+                padding: 0;
+            }
+        }
+    }
+}
 
 /* XLarge */
 
